--- a/views/index.html
+++ b/views/index.html
@@ -17,7 +17,7 @@
             <div class="d-flex">
                 <div class="sidebar-logo">
                     <a href="#">
-                        <img src="./logo.png" alt="Logo KONE">
+                        <img src="../public/images/logo-2.png" alt="Logo KONE">
                     </a>
                 </div>
             </div>
@@ -30,7 +30,7 @@
                 </li>
                 <li class="sidebar-item">
                     <a href="#" class="sidebar-link">
-                        <i class="fas fa-file-lines"></i>
+                        <i class="fas fa-users"></i>
                         <span>Users</span>
                     </a>
                 </li>
@@ -63,7 +63,7 @@
         <div class="main p-3">
             <div class="text-center">
                 <h1>
-                    Sidebar Bootstrap 5
+                    Main
                 </h1>
             </div>
         </div>
