--- a/views/index.html
+++ b/views/index.html
@@ -48,7 +48,7 @@
                 </li>
                 <li class="sidebar-item">
                     <a href="#" class="sidebar-link">
-                        <i class="fas fa-file-lines"></i>
+                        <i class="fas fa-clock-rotate-left"></i>
                         <span>History</span>
                     </a>
                 </li>
